--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,4 @@ fabric.properties
 .idea/**/azureSettings.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/phpstorm,macos
+backstop_data/
