[FEATURE] Adds external configuration via config.json
Implements external configuration system using `config.json`
for easier customization and avoids merge conflicts.

Adds issue templates and pull request template for standardized
contributions and enhances the `.gitignore` file.
Updates documentation and contributing guidelines.

--- a/.gitignore
+++ b/.gitignore
@@ -39,4 +39,16 @@ Temporary Items
 .claude
 
 # End of https://www.toptal.com/developers/gitignore/api/phpstorm,macos
+
+# BackstopJS generated data
 backstop_data/
+
+# Project-specific configuration (users create their own from config.example.json)
+config.json
+
+# Crawled URLs (project-specific)
+crawled_urls.txt
+*.txt
+
+# Scenario files (generated)
+scenarios/
